--- a/css/grid.css
+++ b/css/grid.css
@@ -1,3 +1,4 @@
+
 .grid {
     width: 100%;
     display: block;
@@ -12,8 +13,8 @@
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-left: -4px;
-    margin-right: -4px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
 }
 
 .row.no-gutters {
